--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Live Scoring Golf Application</title>
 </head>
 <body>
+<!-- Root div where the React application will be mounted -->
 <div id="root"></div>
 </body>
 </html>
